[package]
name = "libliquidfun-sys"
version = "0.3.0"
edition = "2021"
authors = ["Mikael Matveinen <mikael@lingongames.com>"]
homepage = "https://github.com/mmatvein/libliquidfun-sys"
repository = "https://github.com/mmatvein/libliquidfun-sys"
description = "A thin Rust ffi wrapper on top of Box2D and LiquidFun. Built using autocxx."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["liquidfun", "box2d", "physics"]

[dependencies]
autocxx = "0.26.0"
cxx = "1.0.110"

[build-dependencies]
autocxx-build = "0.26.0"
cmake = "0.1.50"
cc = "1.0.83"
